apps/homarr/manifests/ingress-homarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  namespace: homarr
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
    - host: homarr
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: homarr
                port:
                  number: 80
  tls:
    - hosts:
        - homarr
